# fribidi-cmake

./: CMakeLists.txt  cmake-testbuild.sh
charset/: CMakeLists.txt
cmake/: ExecuteProcessWrapper.cmake  config.h.in
cmake/testbuild/: CMakeLists.txt  main.c
gen.tab/: CMakeLists.txt  packtab.c
lib/: CMakeLists.txt  Headers.cmake  fribidi-common.h  fribidi-unicode.h  fribidi.h
test/: CMakeLists.txt  run.tests.cmake
